# ue-reinforcement-learning

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
PythonEnv/: bridge.py  requirements.txt  sb3_trainer.py  train.py  train_script.py  utils.py
PythonEnv/example_model/: config.yaml  sb3_config.yaml
PythonEnv/gym_wrappers/: gym_wrapper_base.py  gym_wrapper_general.py  gym_wrapper_multi_env.py  gym_wrapper_pawn.py  gym_wrapper_rl_base.py  gym_wrapper_single_env.py
PythonEnv/sockets/: admin_manager.py  socket_factory.py
UnrealPlugin/: UERLPlugin.uplugin
UnrealPlugin/Content/LevelPrototyping/Materials/: MI_PrototypeGrid_Gray.uasset  MI_PrototypeGrid_TopDark.uasset
UnrealPlugin/Content/LevelPrototyping/Meshes/: SM_Cube.uasset  SM_QuarterCylinder.uasset  SM_Ramp.uasset
UnrealPlugin/Content/ThirdPersonExample/Blueprints/: BP_BridgeObject.uasset  BP_BridgeObjectMultiEnv.uasset  BP_BridgeObjectSingleEnv.uasset  BP_ExampleCharacter.uasset  ResetCounterWidget.uasset
UnrealPlugin/Content/ThirdPersonExample/Input/: IMC_Default.uasset
UnrealPlugin/Content/ThirdPersonExample/Maps/: ThirdPersonMap.umap  ThirdPersonMap_BuiltData.uasset  ThirdPersonMap_MultiEnvBridge.umap  ThirdPersonMap_SingleEnvBridge.umap
UnrealPlugin/Source/UERLPlugin/: RLExampleComponent.cpp  RLExampleComponent.h  UERLPlugin.Build.cs  UERLPlugin.cpp
src/rl_platform/core/: protocols.py  specifications.py
src/rl_platform/plugins/: sb3.py
tests/: conftest.py
tests/integration/: test_sb3_learner.py
tests/unit/: test_sb3_plugin.py  test_types.py
(+316 files in other folders)
