[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uerl"
version = "0.1.0"
description = "Modular RL infrastructure platform for Unreal Engine 5 environments"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Gary Guo", email = "garyguo2004@gmail.com" },
    { name = "Kevin Chen", email = "chenkevin2010@gmail.com" },
]
keywords = ["reinforcement-learning", "unreal-engine", "gymnasium", "ue5", "rl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=0.29",
    "msgpack>=1.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.20",
    "numpy>=1.26",
    "stable-baselines3>=2.3",
]

[project.optional-dependencies]
torch = ["torch>=2.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
rlp = "rl_platform.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/kcccr123/ue-reinforcement-learning"
"Bug Tracker" = "https://github.com/kcccr123/ue-reinforcement-learning/issues"